# Hackathon

./: Backtest.xlsx  README.md  main.py  precos.csv  pyproject.toml  spoti.csv
.streamlit/: config.toml
