[tool.poetry]
name = "teste"
version = "0.1.0"
description = ""
authors = ["Guilherme Torquato <gtorquato@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cohere = "^4.31"
lyricsgenius = "^3.0.1"
streamlit = "^1.27.2"
yfinance = "^0.2.31"
spotipy = "^2.23.0"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
